--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -23,6 +23,14 @@
 				#{trans.name}
 			</p:column>
 		</p:dataTable>
+		<p:treeTable value="#{transactionView.root}" var="group">
+			<f:facet name="header">
+            	Balance
+        	</f:facet>
+        	<p:column headerText="Text">
+				#{group.category.text}
+			</p:column>
+		</p:treeTable>
 	</h:form>
 </body>
 </html>
