--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,69 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
-
-<h:head>
-	<h:outputStylesheet library="css" name="system.css"></h:outputStylesheet>
-</h:head>
-<body>
-	<h:form>
-		<p:selectOneMenu valueChangeListener="#{groupView.handleCategoryChange}">
-			<p:ajax event="change" process="@this" update="tbl"/>
-			<f:selectItem itemLabel="Selecione" itemValue="${null}" />
-			<f:selectItems value="#{categoryView.categories}" var="c"
-				itemLabel="#{c}" itemValue="#{c.id}" />
-		</p:selectOneMenu>
-
-		<p:dataTable id="tbl" value="#{groupView.group}" var="group"
-			style="width:1500px;"
-			rowStyleClass="#{group.onlyCategory ? 'trans-row-01' : 'trans-row-02'}" >
-			<f:facet name="header">
-            	Balance
-        	</f:facet>
-			<p:columnGroup type="header">
-				<p:row>
-					<p:column headerText="Title" width="200"  />
-					<c:forEach items="#{groupView.dates}" var="column">
-						<p:column headerText="#{column.header}" />
-					</c:forEach>
-				</p:row>
-			</p:columnGroup>
-
-
-			<p:column styleClass="trans-col-01"
-				rendered="#{group.onlyCategory or group.showing}">
-
-				<h:panelGroup layout="block" >
-					<h:outputText value="#{group.title}" style="float:right;" />
-					<p:commandLink action="#{group.invertShowing}" update="tbl"
-						rendered="#{group.hasSubCategories and !group.showing}">
-						<h:panelGroup layout="block"
-							styleClass="ui-row-toggler ui-icon ui-icon-circle-triangle-e" />
-					</p:commandLink>
-					<p:commandLink action="#{group.invertShowing}" update="tbl"
-						rendered="#{group.hasSubCategories and group.showing}">
-						<h:panelGroup layout="block"
-							styleClass="ui-row-toggler ui-icon ui-icon-circle-triangle-s" />
-					</p:commandLink>
-				</h:panelGroup>
-			</p:column>
-
-			<p:columns value="#{groupView.dates}" var="column"
-				columnIndexVar="colIndex" styleClass="trans-col-02"
-				rendered="#{group.onlyCategory or group.showing}">
-				<h:outputText value="#{group.values[colIndex]}">
-					<f:convertNumber type="currency" currencySymbol="R$" />
-				</h:outputText>
-			</p:columns>
-			
-		</p:dataTable>
-
-	</h:form>
-</body>
-</html>
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:v="http://xmlns.jcp.org/jsf/composite/components"
+	xmlns:jg="http://com.jgalante.faces/ui"
+	template="/resources/templates/template.xhtml">
+	<ui:define name="styles">
+		<h:outputStylesheet library="css" name="crud.css"></h:outputStylesheet>
+	</ui:define>
+	<ui:define name="content">
+		<p:panel id="panel" header="Balance"
+				style="margin-bottom:10px;width:99%;margin-right:10px;" toggleable="false">
+			<h:form id="frm-group">
+				<p:commandButton id="btn-filter" icon="ui-icon-calculator" value="Filter"/>
+				<p:overlayPanel id="pnl-filter" for="btn-filter" showEffect="blind" hideEffect="explode" showEvent="mouseover" hideEvent="mousedown"
+                    dismissable="false" showCloseIcon="true" dynamic="true">
+					<h:panelGrid columns="2">
+						<h:outputText value="#{constants['yearly.title']}" />
+						<p:selectOneMenu value="#{groupView.year}">
+							<p:ajax event="change" process="@this" update="tbl"
+								listener="#{groupView.handleDateChange}" />
+							<f:selectItems value="#{groupView.years}" var="y"
+								itemLabel="#{y}" itemValue="#{y}" />
+						</p:selectOneMenu>
+						
+						<h:outputText value="#{constants['category.title']}" />
+						<p:selectOneMenu
+							valueChangeListener="#{groupView.handleCategoryChange}">
+							<p:ajax event="change" process="@this" update="tbl" />
+							<f:selectItem itemLabel="Selecione" itemValue="${null}" />
+							<f:selectItems value="#{categoryView.categories}" var="c"
+								itemLabel="#{c}" itemValue="#{c.id}" />
+						</p:selectOneMenu>
+		
+						<h:outputText value="Start #{constants['transaction.date']}" />
+						<p:selectOneMenu value="#{groupView.startDate}"
+							converter="baseConverter">
+							<p:ajax event="change" process="@this" update="tbl"
+								listener="#{groupView.handleDateChange}" />
+							<f:selectItems value="#{groupView.cmbDates}" var="c"
+								itemLabel="#{c.header}" itemValue="#{c.value}" />
+						</p:selectOneMenu>
+		
+						<h:outputText value="End #{constants['transaction.date']}" />
+						<p:selectOneMenu value="#{groupView.endDate}"
+							converter="baseConverter">
+							<p:ajax event="change" process="@this" update="tbl"
+								listener="#{groupView.handleDateChange}" />
+							<f:selectItems value="#{groupView.cmbDates}" var="c"
+								itemLabel="#{c.header}" itemValue="#{c.value}" />
+						</p:selectOneMenu>
+					</h:panelGrid>
+				</p:overlayPanel>
+				<p:dataTable id="tbl" value="#{groupView.group}" var="group"
+					style="overflow: auto;" rowStyleClass="#{group.onlyCategory ? 'trans-row-01' : 'trans-row-02'}" >
+					<p:columnGroup type="header">
+						<p:row>
+							<p:column headerText="Title" styleClass="trans-col-01"/>
+							<c:forEach items="#{groupView.dates}" var="column">
+								<p:column headerText="#{column.header}" styleClass="dates-tbl-header" />
+							</c:forEach>
+							<p:column headerText="Total" styleClass="dates-tbl-header" />
+						</p:row>
+					</p:columnGroup>
+	
+	
+					<p:column styleClass="trans-col-01"
+						rendered="#{group.onlyCategory or group.showing}">
+	
+						<h:panelGroup layout="block">
+							<h:outputText value="#{group.title}" style="float:right;" />
+							<p:commandLink action="#{group.invertShowing}" update="tbl"
+								rendered="#{group.hasSubCategories and !group.showing}">
+								<h:panelGroup layout="block"
+									styleClass="ui-row-toggler ui-icon ui-icon-circle-triangle-e" />
+							</p:commandLink>
+							<p:commandLink action="#{group.invertShowing}" update="tbl"
+								rendered="#{group.hasSubCategories and group.showing}">
+								<h:panelGroup layout="block"
+									styleClass="ui-row-toggler ui-icon ui-icon-circle-triangle-s" />
+							</p:commandLink>
+						</h:panelGroup>
+					</p:column>
+	
+					<p:columns value="#{groupView.dates}" var="column"
+						columnIndexVar="colIndex" styleClass="trans-col-02"
+						rendered="#{group.onlyCategory or group.showing}">
+						<h:outputText value="#{group.values[colIndex]}" styleClass="trans-value-positive-#{group.category.positive}">
+							<f:convertNumber type="currency" currencySymbol="" />
+						</h:outputText>
+					</p:columns>
+					
+					<p:column styleClass="trans-col-02"
+						rendered="#{group.onlyCategory or group.showing}">
+						<h:outputText value="#{group.totalValue}" styleClass="trans-value-total">
+							<f:convertNumber type="currency" currencySymbol="R$ " />
+						</h:outputText>
+					</p:column>
+	
+				</p:dataTable>
+	
+			</h:form>
+		</p:panel>
+	</ui:define>
+</ui:composition>
