--- a/src/main/webapp/pages/compare.xhtml
+++ b/src/main/webapp/pages/compare.xhtml
@@ -91,7 +91,7 @@
 						<p:row>
 							<p:column headerText="#{constant['account.title']}" styleClass="trans-col-01" rowspan="2"/>
 							<c:forEach items="#{compareView.dates}" var="column">
-								<p:column headerText="#{column.header}" styleClass="dates-tbl-header" colspan="2"/>
+								<p:column headerText="#{column.header}" styleClass="trans-col-02 dates-tbl-header" colspan="2"/>
 							</c:forEach>
 						</p:row>
 						<p:row>
