updated current balance

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,8 +12,7 @@
 		<h:outputStylesheet library="css" name="crud.css"></h:outputStylesheet>
 	</ui:define>
 	<ui:define name="content">
-		<p:panel id="pnl-group" header="Financial Management"
-				style="margin-bottom:10px;width:99%;margin-right:10px;" toggleable="false">
+		<p:panel id="pnl-group" header="Financial Management" toggleable="false">
 			<h:form id="frm-group">
 				<p:outputPanel styleClass="space-group">
 					<p:commandButton id="btn-filter" icon="ui-icon-calculator" value="Filter">
