--- a/src/main/webapp/pages/compare.xhtml
+++ b/src/main/webapp/pages/compare.xhtml
@@ -12,8 +12,7 @@
 		<h:outputStylesheet library="css" name="crud.css" />
 	</ui:define>
 	<ui:define name="content">
-		<p:panel id="pnl-compare" header="#{constants['compare.title']}"
-				style="margin-bottom:10px;width:99%;margin-right:10px;" toggleable="false">
+		<p:panel id="pnl-compare" header="#{constants['compare.title']}" toggleable="false">
 			<h:form id="frm-compare" style="width:100%">
 					<h:panelGrid columns="2" >
 						<h:outputText value="#{constants['account.title']}" style="float:right;"/>
