--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,7 +12,7 @@
 		<h:outputStylesheet library="css" name="crud.css"></h:outputStylesheet>
 	</ui:define>
 	<ui:define name="content">
-		<p:panel id="pnl-group" header="Financial Management" toggleable="false">
+		<p:panel id="pnl-group" header="Overview" toggleable="false">
 			<h:form id="frm-group">
 				<p:outputPanel styleClass="space-group">
 					<p:commandButton id="btn-filter" icon="ui-icon-calculator" value="Filter">
@@ -22,8 +22,8 @@
 						<h:panelGrid columns="2">
 							<h:outputText value="#{constants['yearly.title']}" style="float:right;" />
 							<p:selectOneMenu value="#{groupView.year}">
-								<p:ajax event="change" process="@this" update="tbl"
-									listener="#{groupView.handleDateChange}" />
+								<p:ajax event="change" process="@this" update="frm-group"
+									listener="#{groupView.handleYearChange}" />
 								<f:selectItems value="#{groupView.years}" var="y"
 									itemLabel="#{y}" itemValue="#{y}" />
 							</p:selectOneMenu>
